# EZTrader

./: CMakeLists.txt  README.md  dllname.cpp  fvg.cpp  fvgClosest.cpp  fvgClosestATR.cpp  fvgClosestOptimized.cpp  fvgLatestATR.cpp  studies.cpp
